; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-nix.c_obs_hotkeys_platform_free.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-nix.c_obs_hotkeys_platform_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_core_hotkeys = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { %struct.TYPE_5__*, i32, %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i32 }

@OBS_KEY_LAST_VALUE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @obs_hotkeys_platform_free(%struct.obs_core_hotkeys* %0) #0 {
  %2 = alloca %struct.obs_core_hotkeys*, align 8
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i64, align 8
  store %struct.obs_core_hotkeys* %0, %struct.obs_core_hotkeys** %2, align 8
  %5 = load %struct.obs_core_hotkeys*, %struct.obs_core_hotkeys** %2, align 8
  %6 = getelementptr inbounds %struct.obs_core_hotkeys, %struct.obs_core_hotkeys* %5, i32 0, i32 0
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  store %struct.TYPE_5__* %7, %struct.TYPE_5__** %3, align 8
  store i64 0, i64* %4, align 8
  br label %8

8:                                                ; preds = %21, %1
  %9 = load i64, i64* %4, align 8
  %10 = load i64, i64* @OBS_KEY_LAST_VALUE, align 8
  %11 = icmp ult i64 %9, %10
  br i1 %11, label %12, label %24

12:                                               ; preds = %8
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %13, i32 0, i32 2
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %14, align 8
  %16 = load i64, i64* %4, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i64 %16
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @da_free(i32 %19)
  br label %21

21:                                               ; preds = %12
  %22 = load i64, i64* %4, align 8
  %23 = add i64 %22, 1
  store i64 %23, i64* %4, align 8
  br label %8

24:                                               ; preds = %8
  %25 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %26 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %25, i32 0, i32 1
  %27 = load i32, i32* %26, align 8
  %28 = call i32 @XCloseDisplay(i32 %27)
  %29 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %30 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %29, i32 0, i32 0
  %31 = load %struct.TYPE_5__*, %struct.TYPE_5__** %30, align 8
  %32 = call i32 @bfree(%struct.TYPE_5__* %31)
  %33 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %34 = call i32 @bfree(%struct.TYPE_5__* %33)
  %35 = load %struct.obs_core_hotkeys*, %struct.obs_core_hotkeys** %2, align 8
  %36 = getelementptr inbounds %struct.obs_core_hotkeys, %struct.obs_core_hotkeys* %35, i32 0, i32 0
  store %struct.TYPE_5__* null, %struct.TYPE_5__** %36, align 8
  ret void
}

declare dso_local i32 @da_free(i32) #1

declare dso_local i32 @XCloseDisplay(i32) #1

declare dso_local i32 @bfree(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
